# ingryd-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
src/ingryd/api/: __init__.py  __main__.py  _app.py  _ingryd_extra.py
src/ingryd/api/users/: __init__.py  _users.py
src/ingryd/database/: __init__.py  _connect.py  schema.sql
src/ingryd/database/migration/: __init__.py  migration_step_001.sql
src/ingryd/logging/: __init__.py  logging-dev.conf  logging.conf
src/ingryd/utility/: __init__.py  _sigterm_handler.py
tests/: conftest.py
tests/api/: test_http.py
tests/database/: test_query_execution.py
