[tool.poetry]
name = "ingryd-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
cheroot = "^8.3.0"
json-rpc = "^1.13.0"
jsonschema = "^3.2.0"
psycopg2-binary = "^2.8.5"
requests = "^2.23.0"
text-unidecode = "^1.3"
cachetools = "^4.1.0"
werkzeug = "^1.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
flake8-bugbear = "^20.1.4"
flake8-commas = "^2.0.0"
flake8-comprehensions = "^3.2.2"
flake8-import-order = "^0.18.1"
flake8-pep3101 = "^1.3.0"
flake8-quotes = "^3.0.0"
pep8-naming = "^0.10.0"
mypy = "^0.770"
pydocstyle = "^5.0.2"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
pytest-flake8 = "^1.0.4"
pytest-datadir = "^1.3.1"
pytest-docstyle = "^2.0.1"
pytest-pythonpath = "^0.7.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
